--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.demobnk">
+    package="com.example.demo_manager">
    <application
-        android:label="demobnk"
+        android:label="demo_manager"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
