--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^1.1.0
   flutter_svg: ^0.19.1
+  dio: ^3.0.10
+  pretty_dio_logger: ^1.1.1
 
 dev_dependencies:
   flutter_test:
