--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,15 @@ dependencies:
   flutter_svg: ^0.19.1
   dio: ^3.0.10
   pretty_dio_logger: ^1.1.1
+  json_annotation: ^3.1.1
+  shared_preferences: ^2.0.6
+  equatable: ^1.2.6
+  flutter_bloc: ^6.1.2
+  rxdart: ^0.27.2
+  json_serializable: ^3.5.1
+
+
+
 
 dev_dependencies:
   flutter_test:
