--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   equatable: ^1.2.6
   flutter_bloc: ^6.1.2
   rxdart: ^0.27.2
+  fluttertoast: ^8.0.8
   json_serializable: ^3.5.1
 
 
